# rhymeswithlion.github.io

./: .gitignore  .nojekyll  CNAME  Makefile  _quarto.yml  about.html  about.qmd  index.html  index.qmd  listings.json  project.json  requirements.txt  robots.txt  search.json  site.webmanifest  sitemap.xml
.github/workflows/: publish.yml
_freeze/posts/welcome/index/execute-results/: html.json
posts/drafts/: _metadata.yml  conditional-expectation-and-probability.html  conditional-expectation-and-probability.ipynb
posts/drafts/sound-synthesis/: main.py  pyproject.toml  waveguides.html  waveguides.ipynb  waveguides_pt_1.html  waveguides_pt_1.ipynb
posts/drafts/sound-synthesis/string_synthesis_tools/: synthesis_tools_test.py
posts/welcome/: index.html  index.qmd  second-post.html  second-post.qmd
site_libs/bootstrap/: bootstrap-773384f35489ad6109c6341e83312205.min.css
