[project]
name = "sound-synthesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "ipympl>=0.9.8",
    "litellm>=1.80.8",
    "matplotlib>=3.10.7",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "scipy>=1.16.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
